# zelda

./: .gitignore  config.json  logger.json  pyproject.toml
assets/monsters/bamboo/: settings.json
assets/monsters/raccoon/: settings.json
assets/monsters/spirit/: settings.json
assets/monsters/squid/: settings.json
game/: game.py  settings.py  ui.py  utils.py
game/sprite/: camera.py  level.py  player.py  tile.py  weapon.py
src/zelda/: config.py  direction.py  renderer.py  settings.py  utils.py  zelda.py
src/zelda/assets/monsters/raccoon/: settings.json
src/zelda/sprite/: animation.py  camera.py  enemy.py  entity.py  level.py  player.py  spell.py  tile.py  weapon.py
src/zelda/ui/: ui.py
