[project]
name = "zelda"
version = "0.1"
dependencies = [
             'pygame>=2.6.1',
             'pydantic'
]

[project.scripts]
zelda = "zelda.zelda:main"

[tool.uv.pip]
link-mode = "copy"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
